# Lab_Algoritmia_Reversi_Game

./: .gitignore  Andre.c  Andre.h  CMakeLists.txt  README.md  andre.c  andre.h  bot.c  bot.h  cenas  check.c  check.h  estado.c  estado.h  etc.c  etc.h  faria.c  faria.h  files.c  files.h  historico.c  historico.h  interpretador.c  interpretador.h  jogar.c  jogar.h  listas.c  listas.h  main.c  minMax.c  minMax.h  sugest.c  sugest.h  teste  undo.c  undo.h  validas.c  validas.h
